Tagging jbossws-spi-1.1.2.SP6